--- a/index.html
+++ b/index.html
@@ -1,44 +1,73 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Shane O'Neill Portfolio Page</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-</head>
 
-<body>
-    <main id="Developer Portfolio">
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <title>Shane O'Neill Portfolio</title>
+        <link rel="stylesheet" href="style.css">
+        <script type="text/javascript" src="jquery-3.3.1.min.js"></script>
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type='text/css'>
+        <link href="https://fonts.googleapis.com/css?family=Rock+Salt" rel="stylesheet">
+        
 
-        <div class="main">
-            <h1>Shane O'Neill</h1>
-            <p>.NET Developer | Reformed Actor | Kauai Enthusiast</p>
-            <img src="https://static1.squarespace.com/static/5701e8a101dbae8fc9bcc79a/5702f3eb20c647bc942f71bf/5a94a4a853450a8ac59c57b8/1519690954629/BB6A8139.jpg?format=750w"
-                alt="Picture a image here">
+        <script>
+        </script>
+    </head>
+
+    <body>
+            <header id="header">
+                    <div class="content">
+                        <div id="logo">
+                            <a href="">Shane O'Neill</a>
+                        </div>
+                        <nav id="nav">
+                            <ul>
+                                <li><a href="#page1" class="active" title="Next Section">Home</a></li>
+                                <li><a href="#page2" title="Next Section">About Me</a></li>
+                                <li><a href="#page3" title="Next Section">Projects</a></li>
+                                <li><a href="#page4" title="Next Section">Contact</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                </header>
+        
+
+        <div id="page1">
+            <div class="content">
+                    <h1>Shane O'Neill</h1>
+                    <p>.NET Developer | Reformed Actor | Kauai Enthusiast</p>
+            </div>
         </div>
 
-        <div class="About">
-            <p> Hello! My name is Shane and I am a Web Developer in the Cleveland/Akron region. In some other corners of the internet
-                my goal here would have been convincing you to cast me in your new Broadway show. However, after earning my Masters Degree in Musical Theatre from NYU
-                and spending several years as an actor and teacher, I chose to attend Tech Elevator and pivot careers into the world of software development.
-                <br>
-                <br>
-                I am currently working towards completing the .NET Development Bootcamp at Tech Elevator, and will soon be looking to for a position as a Junior
-                Developer. My previous career path placed a strong emphasis on creativity and collaboration. I am hoping to cary those skills forward into my new career as a 
-                developer.
-              </p>
+        <div id="page2">
+            <div class="content">
+                <img src="headshot.jpg" alt="My smiling face.">
+                <p> Hello! My name is Shane and I am a Web Developer in the Cleveland/Akron region. In some other corners of the internet
+                    my goal here would have been convincing you to cast me in your new Broadway show. However, after earning my Masters Degree in Musical Theatre from NYU
+                    and spending several years as an actor and teacher, I chose to attend Tech Elevator and pivot careers into the world of software development.
+                    <br>
+                    <br>
+                    I am currently working towards completing the .NET Development Bootcamp at Tech Elevator, and will soon be looking to for a position as a Junior
+                    Developer. My previous career path placed a strong emphasis on creativity and collaboration. I am hoping to cary those skills forward into my new career as a 
+                    developer.
+                </p>
+            </div>
         </div>
 
-        <div class="Contact">
-                <a href="https://github.com/sponeill"><img src="https://image.ibb.co/ghbQ2c/github_logo.png" alt="github_logo" border="0"></a>
-                <a href="https://www.linkedin.com/in/shanepatrickoneill/"><img src="https://image.ibb.co/iWfPvx/linkedin_logo.png" alt="linkedin_logo" border="0"></a>
-                <a href="oneill.shanepatrick@gmail.com"><img src="https://image.ibb.co/dwx4vx/email.png" alt="email" border="0"></a>
+        <div id="page3">
+            <div class="content">
+                <h1>Projects</h1>
+            </div>
         </div>
 
+        <div id="page4">
+            <div class="content">
+                <p>Let's talk!</p>
+                <a href="https://www.linkedin.com/in/shanepatrickoneill/"><img src="linkedin_logo.png" alt="linkedin_logo" border="0"></a>  
+                <a href="https://github.com/sponeill"><img src="github_logo.png" alt="github_logo" border="0"></a>
+                <a href="mailto:oneill.shanepatrick@gmail.com"><img src="email.png" alt="email" border="0"></a>
+            </div>
+        </div>
 
-    </main>
-</body>
-
-</html>
+    </body>
