--- a/index.html
+++ b/index.html
@@ -52,12 +52,21 @@
                     Developer. My previous career path placed a strong emphasis on creativity and collaboration. I am hoping to cary those skills forward into my new career as a 
                     developer.
                 </p>
+                <p><strong>.NET | Object Oriented Programming | HTML | CSS | JavaScript | Git | SQL | Adobe Photoshop</strong></p>
             </div>
         </div>
 
         <div id="page3">
             <div class="content">
-                <h1>Projects</h1>
+                <div id="project">
+                    <p>Project 1</p>
+                </div>
+                <div id="project">
+                    <p>Project 2</p>
+                </div>
+                <div id="project">
+                    <p>Project 3</p>
+                </div>
             </div>
         </div>
 
