School Icons Formatted

--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
                     developer.
                 </p>
                 <p><strong>.NET | Object Oriented Programming | HTML | CSS | JavaScript | Git | SQL | Adobe Photoshop</strong></p>
+                <div id="school_logos">
+                    <img id="school" src="tech_elevator.png" alt="Tech Elevator">
+                    <img id="school" src="nyu.png" alt="NYU">
+                    <img id="school" src="ashland.png" alt="Ashland">
+                </div>
             </div>
         </div>
 
