--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Shane O'Neill Portfolio</title>
         <link rel="stylesheet" href="style.css">
         <script type="text/javascript" src="jquery-3.3.1.min.js"></script>
