Added Project Icons, formatted

--- a/index.html
+++ b/index.html
@@ -65,13 +65,16 @@
         <div id="page3">
             <div class="content">
                 <div id="project">
-                    <p>Project 1</p>
+                    <p>Vending Machine</p>
+                    <img src="vending_machine.png" alt="">
                 </div>
                 <div id="project">
-                    <p>Project 2</p>
+                    <p>Campsite Reservation System</p>
+                    <img src="camping.png" alt="">
                 </div>
                 <div id="project">
-                    <p>Project 3</p>
+                    <p>My Songbook</p>
+                    <img src="musical-note.png" alt="">
                 </div>
             </div>
         </div>
