Project Info added, About Me Position fixed

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <nav id="nav">
                             <ul>
                                 <li><a href="#page1" class="active" title="Next Section">Home</a></li>
-                                <li><a href="#page2" title="Next Section">About Me</a></li>
+                                <li><a href="#span1" title="Next Section">About Me</a></li>
                                 <li><a href="#page3" title="Next Section">Projects</a></li>
                                 <li><a href="#page4" title="Next Section">Contact</a></li>
                             </ul>
@@ -40,6 +40,8 @@
                     <p>.NET Developer | Reformed Actor | Kauai Enthusiast</p>
             </div>
         </div>
+
+        <span class="anchor" id="span1"></span>
 
         <div id="page2">
             <div class="content">
@@ -64,17 +66,34 @@
 
         <div id="page3">
             <div class="content">
+                <h1>Projects</h3>
+                <div id="project">
+                            <p>My Songbook</p>
+                            <img src="musical-note.png" alt="">
+                            <ul>
+                                <li>OOP, C#, .NET, SQL</li>
+                                <li>Currently developing a database application that allows music teachers to search for songs based on
+                                    the exact needs of a particular student (i.e. Voice Part, Composer, Style, etc.)</li>
+                                <li>Currently have a working console application. The next steps are development of mobile, desktop, and web applications</li>
+                            </ul>
+                </div>
                 <div id="project">
                     <p>Vending Machine</p>
                     <img src="vending_machine.png" alt="">
+                    <ul>
+                       <li>OOP, C#, .NET, File I/O</li> 
+                       <li>Users are able to view inventory, deposit currency, select items, and receive change</li>
+                       <li>Program generates a transaction log as well as a final sales report</li>
+                    </ul>
                 </div>
                 <div id="project">
                     <p>Campsite Reservation System</p>
                     <img src="camping.png" alt="">
-                </div>
-                <div id="project">
-                    <p>My Songbook</p>
-                    <img src="musical-note.png" alt="">
+                    <ul>
+                        <li>OOP, C#, .NET, SQL</li>
+                        <li>Users can access a parks database allowing them to display information on national parks, view upcoming reservations,
+                            search for available campsites based on user specifications, and make reservations</li>
+                    </ul>
                 </div>
             </div>
         </div>
