Projects resized, added to

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <header id="header">
                     <div class="content">
                         <div id="logo">
-                            <a href="">Shane O'Neill</a>
+                            <a href="shane_oneill_resume.pdf">Shane O'Neill</a>
                         </div>
                         <nav id="nav">
                             <ul>
@@ -51,7 +51,7 @@
                     and spending several years as an actor and teacher, I chose to attend Tech Elevator and pivot careers into the world of software development.
                     <br>
                     <br>
-                    I am currently working towards completing the .NET Development Bootcamp at Tech Elevator, and will soon be looking to for a position as a Junior
+                    I am currently working towards completing the .NET Development Bootcamp at Tech Elevator, and will soon be looking for a position as a Junior
                     Developer. My previous career path placed a strong emphasis on creativity and collaboration. I am hoping to cary those skills forward into my new career as a 
                     developer.
                 </p>
@@ -66,17 +66,28 @@
 
         <div id="page3">
             <div class="content">
-                <h1>Projects</h3>
                 <div id="project">
-                            <p>My Songbook</p>
-                            <img src="musical-note.png" alt="">
-                            <ul>
-                                <li>OOP, C#, .NET, SQL</li>
-                                <li>Currently developing a database application that allows music teachers to search for songs based on
-                                    the exact needs of a particular student (i.e. Voice Part, Composer, Style, etc.)</li>
-                                <li>Currently have a working console application. The next steps are development of mobile, desktop, and web applications</li>
-                            </ul>
+                    <img id="idea" style="width: 120px" src="ideas.png" alt="">
+                    <p><strong>Projects</strong></p>
                 </div>
+                <div id="project">
+                     <p>My Songbook</p>
+                    <img src="musical-note.png" alt="">
+                    <ul>
+                        <li>OOP, C#, .NET, SQL</li>
+                        <li>Currently developing a database application that allows music teachers to search for songs based on
+                        the exact needs of a particular student (i.e. Voice Part, Composer, Style, etc.)</li>
+                    </ul>
+                </div>
+                <div id="project">
+                        <p>Campsite Reservation System</p>
+                        <img src="camping.png" alt="">
+                        <ul>
+                            <li>OOP, C#, .NET, SQL</li>
+                            <li>Users can access a parks database allowing them to display information on national parks, view upcoming reservations,
+                                search for available campsites based on user specifications, and make reservations</li>
+                        </ul>
+                    </div>
                 <div id="project">
                     <p>Vending Machine</p>
                     <img src="vending_machine.png" alt="">
@@ -87,14 +98,16 @@
                     </ul>
                 </div>
                 <div id="project">
-                    <p>Campsite Reservation System</p>
-                    <img src="camping.png" alt="">
+                    <p>Augment Reality Application</p>
+                    <img src="augmented-reality.png" alt="">
                     <ul>
-                        <li>OOP, C#, .NET, SQL</li>
-                        <li>Users can access a parks database allowing them to display information on national parks, view upcoming reservations,
-                            search for available campsites based on user specifications, and make reservations</li>
+                        <li>Unity, Vuforia, C#</li>
+                        <li>Android application that tracks the cover image of a video game case and produces interactive augmented 
+                            reality content.
+                        </li>
                     </ul>
                 </div>
+               
             </div>
         </div>
 
