Text Bolding, Line Break added

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                     Developer. My previous career path placed a strong emphasis on creativity and collaboration. I am hoping to cary those skills forward into my new career as a 
                     developer.
                 </p>
+                <hr>
                 <p><strong>.NET | Object Oriented Programming | HTML | CSS | JavaScript | Git | SQL | Adobe Photoshop</strong></p>
                 <div id="school_logos">
                     <img id="school" src="tech_elevator.png" alt="Tech Elevator">
@@ -71,7 +72,7 @@
                     <p><strong>Projects</strong></p>
                 </div>
                 <div id="project">
-                     <p>My Songbook</p>
+                     <p><strong>My Songbook</strong> </p>
                     <img src="musical-note.png" alt="">
                     <ul>
                         <li>OOP, C#, .NET, SQL</li>
@@ -80,7 +81,7 @@
                     </ul>
                 </div>
                 <div id="project">
-                        <p>Campsite Reservation System</p>
+                        <p><strong>Campsite Reservation System</strong></p>
                         <img src="camping.png" alt="">
                         <ul>
                             <li>OOP, C#, .NET, SQL</li>
@@ -89,7 +90,7 @@
                         </ul>
                     </div>
                 <div id="project">
-                    <p>Vending Machine</p>
+                    <p><strong>Vending Machine</strong></p>
                     <img src="vending_machine.png" alt="">
                     <ul>
                        <li>OOP, C#, .NET, File I/O</li> 
@@ -98,7 +99,7 @@
                     </ul>
                 </div>
                 <div id="project">
-                    <p>Augment Reality Application</p>
+                    <p><strong>Augment Reality Application</strong></p>
                     <img src="augmented-reality.png" alt="">
                     <ul>
                         <li>Unity, Vuforia, C#</li>
