Added website project

--- a/index.html
+++ b/index.html
@@ -108,6 +108,16 @@
                         </li>
                     </ul>
                 </div>
+                <div id="project">
+                    <p><strong>This Website!</strong></p>
+                    <img src="website_design.png" alt="">
+                    <ul>
+                       <li>HTML, CSS</li> 
+                       <li>I designed and built this very website! In it's current form it only implements HTML and CSS, but it is an 
+                           ever evolving work in progress. 
+                       </button></li>
+                    </ul>
+                </div>
                
             </div>
         </div>
