GitHub Repo Links added to projects

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
                 <div id="project">
                      <p><strong>My Songbook</strong> </p>
-                    <img src="musical-note.png" alt="">
+                    <a href="https://github.com/sponeill/MySongbook"><img src="musical-note.png" alt=""></a>
                     <ul>
                         <li>OOP, C#, .NET, SQL</li>
                         <li>Currently developing a database application that allows music teachers to search for songs based on
@@ -91,7 +91,7 @@
                     </div>
                 <div id="project">
                     <p><strong>Vending Machine</strong></p>
-                    <img src="vending_machine.png" alt="">
+                    <a href="https://github.com/sponeill/vending-machine-capstone"><img src="vending_machine.png" alt=""></a>
                     <ul>
                        <li>OOP, C#, .NET, File I/O</li> 
                        <li>Users are able to view inventory, deposit currency, select items, and receive change</li>
