Songbook Project info edited

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     developer.
                 </p>
                 <hr>
-                <p><strong>.NET | Object Oriented Programming | HTML | CSS | JavaScript | Git | SQL | Adobe Photoshop</strong></p>
+                <p><strong>C# | .NET | Object Oriented Programming | HTML | CSS | JavaScript | Git | SQL | Adobe Photoshop</strong></p>
                 <div id="school_logos">
                     <img id="school" src="tech_elevator.png" alt="Tech Elevator">
                     <img id="school" src="nyu.png" alt="NYU">
@@ -75,9 +75,10 @@
                      <p><strong>My Songbook</strong> </p>
                     <a href="https://github.com/sponeill/MySongbook"><img src="musical-note.png" alt=""></a>
                     <ul>
-                        <li>OOP, C#, .NET, SQL</li>
-                        <li>Currently developing a database application that allows music teachers to search for songs based on
-                        the exact needs of a particular student (i.e. Voice Part, Composer, Style, etc.)</li>
+                        <li>OOP, C#, .NET, SQL, HTML, CSS</li>
+                        <li>Currently developing a web application that offers vocal music teachers a streamlined solution to find
+                            new material for their students. 
+                        </li>
                     </ul>
                 </div>
                 <div id="project">
