Github Repo Link

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 </div>
                 <div id="project">
                     <p><strong>This Website!</strong></p>
-                    <img src="website_design.png" alt="">
+                    <a href="https://github.com/sponeill/sponeill.github.io"><img src="website_design.png" alt=""></a>
                     <ul>
                        <li>HTML, CSS</li> 
                        <li>I designed and built this very website! In it's current form it only implements HTML and CSS, but it is an 
