--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     developer.
                 </p>
                 <hr>
-                <p><strong>C# | .NET | Object Oriented Programming | HTML | CSS | JavaScript | Git | SQL | Adobe Photoshop</strong></p>
+                <p><strong>C# | .NET | Object Oriented Programming | I/O | SQL | ASP.NET MVC | HTML | CSS | Git | Visual Studio 2017 | Photoshop</strong></p>
                 <div id="school_logos">
                     <img id="school" src="tech_elevator.png" alt="Tech Elevator">
                     <img id="school" src="nyu.png" alt="NYU">
@@ -75,7 +75,7 @@
                      <p><strong>My Songbook</strong> </p>
                     <a href="https://github.com/sponeill/MySongbook"><img src="musical-note.png" alt=""></a>
                     <ul>
-                        <li>OOP, C#, .NET, SQL, HTML, CSS</li>
+                        <li>OOP, C#, ASP.NET MVC, SQL, HTML, CSS</li>
                         <li>Currently developing a web application that offers vocal music teachers a streamlined solution to find
                             new material for their students. 
                         </li>
