--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     developer.
                 </p>
                 <hr>
-                <p><strong>C# | .NET | Object Oriented Programming | I/O | SQL | ASP.NET MVC | HTML | CSS | Git | Visual Studio 2017 | Photoshop</strong></p>
+                <p><strong>C# | .NET | Object Oriented Programming | I/O | SQL | <br> ASP.NET MVC | HTML | CSS | Git | Visual Studio 2017 | Photoshop</strong></p>
                 <div id="school_logos">
                     <img id="school" src="tech_elevator.png" alt="Tech Elevator">
                     <img id="school" src="nyu.png" alt="NYU">
