--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div id="page1">
             <div class="content">
                     <h1>Shane O'Neill</h1>
-                    <p>.NET Developer | Reformed Actor | Kauai Enthusiast</p>
+                    <p>Full Stack Developer | Reformed Actor | Kauai Enthusiast</p>
             </div>
         </div>
 
