Campsit Github Added

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 </div>
                 <div id="project">
                         <p><strong>Campsite Reservation System</strong></p>
-                        <img src="camping.png" alt="">
+                        <a href="https://github.com/sponeill/campsite-reservation-system-capstone"><img src="camping.png" alt=""></a>
                         <ul>
                             <li>OOP, C#, .NET, SQL</li>
                             <li>Users can access a parks database allowing them to display information on national parks, view upcoming reservations,
