--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
                     </ul>
                 </div>
                 <div id="project">
-                    <p><strong>Augment Reality Application</strong></p>
-                    <img src="augmented-reality.png" alt="">
+                    <p><strong>National Parks Geek Website</strong></p>
+                   <a href="https://github.com/sponeill/nationalparksgeek-website-capstone"><img src="mountain.png" alt=""></a>
                     <ul>
-                        <li>Unity, Vuforia, C#</li>
-                        <li>Android application that tracks the cover image of a video game case and produces interactive augmented 
-                            reality content.
+                        <li>C#, ASP.NET MVC, SQL, HTML, CSS</li>
+                        <li>Website that accesses a database and displays National Park information, weather forecasts (including a Fahrenheit/Celsius conversion
+                            feature), and generates user surveys..
                         </li>
                     </ul>
                 </div>
@@ -132,4 +132,5 @@
             </div>
         </div>
 
+        <script src="script.js"></script>
     </body>
